--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -54,6 +54,14 @@
         "dataSource": "contactsRemote"
       }
     },
+    "resources": {
+      "css": [
+      {
+        "uri": "css/detailed.css"
+      }
+      ]
+    }
+  ,
     "routing": {
       "config": {
         "routerClass": "sap.m.routing.Router",
